including edits from google doc

--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -121,7 +121,7 @@ We focus on five key themes (Fig. `r fig_schematic`):
 (5) size-structuring of whole-tree and ecosystem function.
 *We then consider the implications for understanding forest responses to global change, including how these scale across space and time.* 
 
-![**Figure `r fig_schematic`. Schematic summarizing vertical gradients in forests with dense canopies during daytime growing season conditions.** Patterns summarized here tend to be weaker, or sometimes reversed, under more open canopies, during seasons of deciduous leaf loss, or at nighttime. [Issue #27](https://github.com/EcoClimLab/vertical-thermal-review/issues/27). ](schematics/Screen Shot 2021-07-19 at 1.10.17 PM.png)
+![**Figure `r fig_schematic`. Schematic summarizing vertical gradients in forests with dense canopies during daytime growing season conditions.** Patterns summarized here tend to be weaker, or sometimes reversed, under more open canopies, when canopy trees are seasonally deciduous, or at nighttime. [Issue #27](https://github.com/EcoClimLab/vertical-thermal-review/issues/27). ](schematics/Screen Shot 2021-07-19 at 1.10.17 PM.png)
 
 
 
@@ -137,7 +137,7 @@ While the focus here is on vertical gradients, it is important to note that in h
 
 **Canopy foliage acts as the primary physical barrier between the atmosphere and the forest floor, buffering multiple aspects of the understory conditions. It is critical in influencing -- and is influenced by -- the vertical biophysical gradient (Fig. `r fig_NEON_vertical`).**
 Foliage distribution is structured in correspondence with the distribution of tree sizes within a forest, where leaf area density (LAD; *i.e.*, leaf area per unit volume) patterns along the vertical gradient are heterogeneous across forests (Figs. `r fig_NEON_vertical`a-b, `r SIfig_NEON_all`). 
-Dense canopy forests composed of broadleaf trees can have high LAD in the upper canopy layers, as well as in the understory (e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`a) -- a pattern common in tropical forests [@ashtonComparisonsStructureMixed1992; @koikeCanopyStructureTropical1993].
+Dense canopy forests composed of broadleaf trees can have high LAD in the upper canopy layers, as well as in the understory (e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`a) -- a pattern also common in tropical forests [@ashtonComparisonsStructureMixed1992; @koikeCanopyStructureTropical1993].
 In temperate forests, although LAD is generally more concentrated in the upper-canopy, undualting patterns are formed by conifers and top vs. bottom heavy foliage trees and sometimes by dense understories [e.g., SCBI, Fig. `r fig_NEON_vertical`a, @parkerVerticalProfileCanopy1989; @terborghVerticalComponentPlant1985; @ishiiExploringRelationshipsCanopy2004a; @parkerCanopyLightTransmittance2002]. 
 In open canopy forests, including many needle-leaf forests, LAD can be predominantly accumulated in the lower canopy layers [e.g., PUUM and WREF, Fig. `r fig_NEON_vertical`a, @hanberryOpenForestEcosystems2020a; @lawLeafAreaDistribution2001; @baldocchiSeasonalVariationEnergy1997; @bonan_ecological_2016; @ishiiExploringRelationshipsCanopy2004a]. 
 Soil moisture conditions, topography, and gap formations followed by disturbance all alter foliage patterns and further influence the formation of relatively closed vs. open canopy forests [e.g., @almeidaContrastingFireDamage2016; @starkReframingTropicalSavannization2020; @bonan_ecological_2016; @hanberryOpenForestEcosystems2020a]. 
@@ -145,7 +145,7 @@ In addition, seasonally dry and wet conditions, deciduousness, and phenology con
 In this review, we focus on growing season conditions (peak LAD) unless otherwise noted.
 
 **Light, specifically the proportion of incident light and photosynthetically active radiation (PAR), decreases from canopy tops to the forest floor, with the profile shape modified by LAD, canopy height, canopy structure, and across species and forest types [Figs. `r fig_NEON_vertical`b-d, `r SIfig_NEON_all`, @koike_leaf_2001].** 
-This gradient is more pronounced under dense canopies, including broad-leaf and mixed forests (e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`d), then under more open canopy forests, including many conifer forests [e.g., OSBS, PUUM, and WREF, Figs. `r fig_NEON_vertical`d, `r SIfig_NEON_all`, @aussenacInteractionsForestStands2000a; Smith et al., 2019; Tymen et al., 2017; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006; @baldocchiSeasonalVariationEnergy1997]. 
+This gradient is more pronounced under dense canopies, including broad-leaf and mixed forests (e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`d), than under more open canopy forests, including many conifer forests [e.g., OSBS, PUUM, and WREF, Figs. `r fig_NEON_vertical`d, `r SIfig_NEON_all`, @aussenacInteractionsForestStands2000a; Smith et al., 2019; Tymen et al., 2017; @chazdonPhotosyntheticLightEnvironments1984; @parkerConsequencesEnvironmentalHeterogeneity2019; @bartemucciOverstoryInfluencesLight2006; @baldocchiSeasonalVariationEnergy1997]. 
 Variability in the light environment decreases with height, with the shaded understory being highly influenced by sunflecks, or brief increases in solar radiation caused by small canopy gaps and wind-induced canopy movements [@waySunflecksTreesForests2012]. 
 
 **Wind speeds are also higher at the top of the canopy, owing to the effect of buffering with canopy height [@juckerCanopyStructureTopography2018].**
@@ -158,11 +158,11 @@ Atmospheric CO~2~ concentrations tend to be higher near ground level at night, a
 
 Relative humidity, RH, tends to be higher in the understory and decreases with height across the vertical profile, although this trend is absent in open forests [Figs. `r fig_NEON_vertical`f, `r SIfig_NEON_all`, e.g., @mcgregorTreeHeightLeaf2021; @juckerCanopyStructureTopography2018].
 Dense-canopy forests maintain higher daily maximum RH below-canopy than open forests and nearby open areas, and this effect is greater in wetter conditions, and warmer months [@vonarxSpatiotemporalEffectsForest2012a; @hanberryOpenForestEcosystems2020a]. 
-In combination with $T_{air}$, RH determines vapor pressure deficit (VPD) -- the driving force of water loss from leaves, which tends to be greater in upper-canopy and canopy gaps than in the understory [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. 
+In combination with $T_{air}$, RH determines vapor pressure deficit (VPD) -- the driving force of water loss from leaves, which tends to be greater in upper-canopy and canopy gaps than in the understory [@fauset_differences_2018; @tymenQuantifyingMicroenvironmentalVariation2017; @niinemetsPhotosyntheticAcclimationSimultaneous2004b].Especially when canopy height and leaf area index are large, maximum Tair and VPD are reduced in the understory [@juckerCanopyStructureTopography2018].
 
 **Air temperature, $T_{air}$, often shows little variation across the vertical gradient, but under certain circumstances it can be significantly buffered by forest canopies (Figs. `r fig_NEON_vertical`, `r SIfig_NEON_all`).**
 The $T_{air}$ gradient along canopies and understories varies with factors such as radiation fluxes, local topography, vertical air mixing, cloud cover and vegetation [@frenneForestMicroclimatesClimate2021]. 
-Typically, dense canopies buffer understories from maximum $T_{air}$ relatively more than open canopies -- *i.e.*, dense canopy understories can have cooler maximum daytime $T_{air}$ and warmer minimum $T_{air}$ during the night than open canopy understories or nearby clearings [@frenneForestMicroclimatesClimate2021; @vonarxSpatiotemporalEffectsForest2012a; @defrenneGlobalBufferingTemperatures2019; @davisMicroclimaticBufferingForests2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009]. 
+Typically, dense canopies buffer understories from high maximum $T_{air}$ relatively more than open canopies -- *i.e.*, dense canopy understories can have cooler maximum daytime $T_{air}$ and warmer minimum $T_{air}$ during the night than open canopy understories or nearby clearings [@frenneForestMicroclimatesClimate2021; @vonarxSpatiotemporalEffectsForest2012a; @defrenneGlobalBufferingTemperatures2019; @davisMicroclimaticBufferingForests2019; @zellweger_seasonal_2019; @ramboCanopyMicroclimateResponse2009]. 
 Notably, this pattern can be reversed in open forests, where below-canopy maximum $T_{air}$ can be warmer than canopy $T_{air}$ due to turbulent air mixing and thermal radiative flux from the soil and the canopy that is intercepted by lower-canopy layers, analogous to 'canopy greenhouse effect' [e.g., OSBS, Figs. `r fig_NEON_vertical`g, `r SIfig_NEON_all`b, @banerjeeExplainingConvectorEffect2017; @curtis_intracanopy_2019;@zweifelMiddayStomatalClosure2002; @hadleyInfluenceKrummholzMat1987; @ramboCanopyMicroclimateResponse2009; @hardwickRelationshipLeafArea2015].    
 
 **The buffering patterns described above vary geographically, seasonally, and across forest types [Figs. `r fig_NEON_vertical`, `r SIfig_NEON_all`, @frenneForestMicroclimatesClimate2021].**
@@ -198,7 +198,7 @@ With adequate water, species with smaller leaves (higher $g_a$) and larger $g_s$
 
 **These basic biophysical principles shape the propensities for $T_{leaf}$ to be elevated above $T_{air}$ across vertical gradients in closed-canopy forests.**
 High radiation at the top of the vertical profile (Fig. `r fig_NEON_vertical`) implies that canopy leaves have much greater propensity for high $T_{leaf}-T_{air}$, such that they would be expected to be warmer than understory leaves under most conditions (Fig. `r fig_leaf_T`).
-However, higher windspeeds such as in NEON sites with windspeeds ~4 m s^-1^ (Fig. `r fig_NEON_vertical`) are capable of lowering $T_{leaf}-T_{air}$ upto ~ 4$^\circ$C (Fig. `r fig_leaf_T`b)[@bonan_ecological_2016; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. Collectively, windspeed, lower RH (Fig. `r fig_NEON_vertical`), along with adaptive leaf traits that reduce $g_a$ and increase $g_s$ (reviewed below), give upper canopy lower sensitivity to intercepted radiation (Fig. `r fig_leaf_T`a) and higher rates of heat loss (Fig. `r fig_leaf_T`b-e).
+However, higher wind speeds (e.g., up to ~4 $ms^{-1}$ at NEON sites; Fig. `r fig_NEON_vertical`) are capable of lowering $T_{leaf}-T_{air}$ upto ~ 4$^\circ$C [Fig. `r fig_leaf_T`b, @bonan_ecological_2016; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. Collectively, higher windspeed (Fig. `r fig_NEON_vertical`), and with adaptive leaf traits increase $g_a$ and $g_s$ (reviewed below) give upper canopy leaves lower sensitivity to intercepted radiation (Fig. `r fig_leaf_T`a) and higher rates of heat loss (Fig. `r fig_leaf_T`b-e). ~In contrast, greater RH and lower wind speeds in the understory may stifle ??E(through reduced gs and ga), thereby increasing Tleaf (Fig. 3, Perez & Feeley, 2018; Tibbitts, 1979).~
 
 **Vertical $T_{leaf}$ gradients can also vary with canopy structure (Fig. `r fig_leaf_T`).**
 $T_{leaf}$ generally tracks $T_{air}$, where vertical gradients of $T_{air}$ depend on canopy structure and LAI [@leuzingerTreeSpeciesDiversity2007;@mullerEvidenceEfficientNonevaporative2021]. Closed canopies, and high LAI canopies act as an umbrella, absorbing most of the incoming radiation and preventing vertical air mixing in the understory microclimate. The intensity of incoming radiation and VPD in the upper canopy can limit $g_s$. Therefore, we would expect a stronger $T_{leaf}$ gradient where upper canopy leaves can reach much warmer temperatures than below canopies layers [@millerOnlySunlitLeaves2021]. In contrast, open canopies, or lower canopy LAI allow more vertical air mixing and sunlight into the understory, that can either neutralize a $T_{leaf}$ gradient or elevate below canopy $T_{leaf}-T_{air}$ of shade leaves more than upper canopy as in the case of the 'canopy greenhouse effect' or sunflecks, as mentioned above [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013b], and also due to the propensity of shade leaves for lower $g_s$ and greater thermal capacitance (capacity to hold heat) [@schymanskiStomatalControlLeaf2013b]. 
